[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[project]
name = "test-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "deepagents>=0.6.11",
    "langchain-openai>=1.3.2",
    "langfuse>=4.9.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
